# InstaSave

./: .gitignore  README.md  pyproject.toml
.github/: dependabot.yml
instasave/: __init__.py  __main__.py  save_post.py
