[tool.poetry]
name = "instasave"
version = "0.1.0"
description = "Download script for Instagram posts"
authors = ["Felix Soubelet <felix.soubelet@liverpool.ac.uk>"]
license = "MIT"

readme = "README.md"
repository = "https://github.com/fsoubelet/InstaSave"

keywords = ["Download", "Instagram", "Utility"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.6"
loguru = "^0.4.1"
tqdm = "^4.46.0"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
