[tool.poetry]
name = "instasave"
version = "0.3.0"
description = "Download script for Instagram posts"
authors = ["Felix Soubelet <felix.soubelet@liverpool.ac.uk>"]
license = "MIT"

readme = "README.md"
repository = "https://github.com/fsoubelet/InstaSave"

keywords = ["Download", "Instagram", "Utility"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.8"
loguru = "^0.4"
tqdm = "^4.46"
requests = "^2.23"
typer = "^0.3"

[tool.poetry.dev-dependencies]
typer-cli = "^0.0.11"


[tool.poetry.scripts]
instasave = "instasave.__main__:app"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
