[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "instasave/__init__.py"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
]

[tool.hatch.build.targets.wheel]
packages = ["instasave"]

[project]
name = "instasave"
readme = "README.md"
description = "Download script for Instagram posts."
authors = [
    {name = "Felix Soubelet", email = "felix.soubelet@cern.ch"},
]
license = "MIT"
dynamic = ["version"]
requires-python = ">=3.9"

keywords = [
    "Download",
    "Instagram",
    "Utility",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Utilities",
]

dependencies = [
    "tqdm >= 4.50",
    "loguru < 1.0",
    "requests >= 2.25",
    "typer >= 0.10",
]

[project.urls]
homepage = "https://github.com/fsoubelet/InstaSave"
repository = "https://github.com/fsoubelet/InstaSave"


[tool.ruff]
# Generate Python 3.9-compatible code.
target-version = "py39"
